package datasource;

public interface Loader {
    public EdgeData[] getEdges();
    public String[] getNodes();
}
