package domain;

public class Node {
    private String label;

    public Node(String label){
        this.label = label;
    }

    public String getLabel(){
        return this.label;
    }

}
